src/objects/Timesheet_Purpose__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicable_Employee_Class__c</fullName>
        <description>The list here should match with picklist at Employee Object</description>
        <label>Applicable Employee Class</label>
        <picklist>
            <picklistValues>
                <fullName>Field Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Sales - NP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Applicable_WO_Status__c</fullName>
        <label>Applicable WO Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DE_Code__c</fullName>
        <description>DE Code Assignment</description>
        <label>DE Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Timesheet Purpose</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DE_Code__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Timesheet Purpose Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Timesheet Purposes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>